from logger import Logger

class AttackModule:
    """
    AttackModule class to execute attacks based on identified vulnerabilities.
    """
    def perform_attacks(self, vulnerabilities: list) -> dict:
        """
        Executes attacks on the vulnerabilities identified by the scanner.

        Args:
        vulnerabilities (list): A list of dictionaries, each containing details of a vulnerability.

        Returns:
        dict: A dictionary containing the results of the attacks, grouped by the type of vulnerability.
        """
        attack_results = {}
        for vulnerability in vulnerabilities:
            vulnerability_type = vulnerability['type']
            if vulnerability_type not in attack_results:
                attack_results[vulnerability_type] = []

            if vulnerability_type == 'SQL Injection':
                result = self.attack_sql_injection(vulnerability['detail'])
            elif vulnerability_type == 'XSS':
                result = self.attack_xss(vulnerability['detail'])
            else:
                result = "Attack type not supported."
            attack_results[vulnerability_type].append(result)

        return attack_results

    def attack_sql_injection(self, detail: str) -> str:
        """
        Simulates an SQL injection attack.

        Args:
        detail (str): The detail of the SQL injection vulnerability.

        Returns:
        str: The result of the attack.
        """
        logger = Logger()
        logger.log_attack({"target": detail, "method": "SQL Injection", "result": "Attempted"})
        return "SQL Injection attack successful."

    def attack_xss(self, detail: str) -> str:
        """
        Simulates an XSS attack.

        Args:
        detail (str): The detail of the XSS vulnerability.

        Returns:
        str: The result of the attack.
        """
        logger = Logger()
        logger.log_attack({"target": detail, "method": "XSS", "result": "Attempted"})
        return "XSS attack successful."
