class Logger:
    """
    Logger class responsible for logging attack details.
    """
    def log_attack(self, attack_details: dict) -> None:
        """
        Logs the details of the attacks performed.

        Args:
        attack_details (dict): A dictionary containing details of the attack such as type, target, and outcome.
        """
        # Log format: "Attack on [target] using [method] was [result]."
        print(f"Attack on {attack_details['target']} using {attack_details['method']} was {attack_details['result']}.")
