from ui_module import UIModule
from vulnerability_scanner import VulnerabilityScanner
from attack_module import AttackModule
from logger import Logger

class Main:
    """
    Main class integrating all modules, manages the flow of operations from UI to logging.
    """
    def __init__(self):
        self.url = ""
        self.scanner = VulnerabilityScanner()
        self.attacker = AttackModule()
        self.ui = UIModule()
        self.logger = Logger()

    def run(self) -> None:
        """
        Orchestrates the scanning and attacking process.
        """
        # Start the user interface and get the target URL
        self.url = self.ui.start_interface()

        # Scan the URL for vulnerabilities
        vulnerabilities = self.scanner.scan(self.url)

        # Perform attacks based on the identified vulnerabilities
        attack_results = self.attacker.perform_attacks(vulnerabilities)

        # Log the attack results
        for attack_type, results in attack_results.items():
            for result in results:
                self.logger.log_attack({
                    'target': self.url,
                    'method': attack_type,
                    'result': result
                })

if __name__ == "__main__":
    main_app = Main()
    main_app.run()
