class UIModule:
    """
    UIModule class to handle user interactions.
    """
    def start_interface(self) -> str:
        """
        Starts the user interface for the application and returns the URL entered by the user.

        Returns:
        str: The URL of the web application to scan.
        """
        print("Welcome to the Web Application Vulnerability Scanner.")
        print("Please enter the URL of the web application you want to scan:")
        return input("URL: ")
