import requests

class VulnerabilityScanner:
    """
    VulnerabilityScanner class to identify vulnerabilities in a web application.
    """
    def scan(self, target_url: str) -> list:
        """
        Scans the specified URL for common web vulnerabilities such as SQL injection and XSS.

        Args:
        target_url (str): The URL of the web application to scan.

        Returns:
        list: A list of identified vulnerabilities, each represented as a dictionary.
        """
        print(f"Scanning {target_url} for vulnerabilities...")
        vulnerabilities = []
        # Enhanced simulation of the scanning process
        if self.send_test_payload(target_url, "' OR '1'='1"):
            vulnerabilities.append({"type": "SQL Injection", "detail": "SQL injection vulnerability detected using payload ' OR '1'='1."})
        if self.send_test_payload(target_url, "<script>alert('XSS')</script>"):
            vulnerabilities.append({"type": "XSS", "detail": "XSS vulnerability detected using payload <script>alert('XSS')</script>."})

        return vulnerabilities

    def send_test_payload(self, target_url: str, payload: str) -> bool:
        """
        Sends a test payload to the target URL and checks if the application is vulnerable.

        Args:
        target_url (str): The URL of the web application to scan.
        payload (str): The payload to test against the application.

        Returns:
        bool: True if the application is vulnerable, False otherwise.
        """
        try:
            response = requests.get(target_url, params={'input': payload})
            if payload in response.text:
                return True
        except requests.exceptions.RequestException as e:
            print(f"Error sending request: {e}")
        return False
