
classDiagram
    class Main {
        +url: str
        +scanner: VulnerabilityScanner
        +attacker: AttackModule
        +ui: UIModule
        +logger: Logger
        +run() void
    }
    class VulnerabilityScanner {
        +scan(target_url: str) list
    }
    class AttackModule {
        +perform_attacks(vulnerabilities: list) dict
    }
    class UIModule {
        +start_interface() void
    }
    class Logger {
        +log_attack(attack_details: dict) void
    }
    Main --> VulnerabilityScanner
    Main --> AttackModule
    Main --> UIModule
    Main --> Logger
